# SEPA-Project

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-etl.txt  requirements.txt
.github/workflows/: daily.yml
.streamlit/: config.toml
dags/: sepa_pipeline.py
src/: config.py  daily.py  dashboard.py  data_access.py  fetch_sepa_prices.py  fetch_sepa_range.py  generate_gold.py  logging_utils.py  sepa_source.py  storage.py  theme.py  transform_sepa.py
tests/: conftest.py  test_config.py  test_data_access.py  test_fetch.py  test_gold.py  test_scheduling.py  test_sepa_source.py  test_theme.py  test_transform.py
